# multimodal-motor-fault-fusion

./: .gitignore  Makefile  README.md  pyproject.toml  requirements.txt
configs/: base.yaml
docs/: project_charter.md
scripts/: download_kaggle_raw.py  server_bootstrap.py
src/: __init__.py
src/data/: split_validation.py
src/evaluation/: evaluate.py
src/training/: train.py
src/utils/: __init__.py  logging.py  seed.py
tests/: test_entrypoints.py  test_seed.py  test_split_logic.py
